--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,10 @@ pydantic-settings==2.1.0
 python-jose[cryptography]==3.3.0
 httpx==0.25.0
 redis==5.0.1
+loguru==0.7.2
+twilio==9.0.0
+openai==1.12.0
+passlib[bcrypt]==1.7.4
 
 # Airtable
 pyairtable==2.3.0
