fix: añadir email-validator para pydantic EmailStr

--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ openai==1.12.0
 passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
 slowapi==0.1.9
+email-validator==2.1.0
 
 # Airtable
 pyairtable==2.3.0
