--- a/.github/workflows/build-apk.yml
+++ b/.github/workflows/build-apk.yml
@@ -29,6 +29,9 @@ jobs:
       with:
         gradle-version: '8.2'
 
+    - name: Install ImageMagick
+      run: sudo apt-get update && sudo apt-get install -y imagemagick
+
     - name: Generate launcher icons
       run: |
         # Create icon directories
