fix: reparacion completa errores compilacion Android
- Eliminado Scarlet WebSocket, usando OkHttp nativo
- Creada interfaz WebSocketService
- Actualizados ViewModels
- Corregidos imports y referencias
- Simplificados Screens
- Actualizados modelos con SerializedName
- Anadida dependencia lifecycle-runtime-compose
- Limpiado gradle.properties
- SDK 35, AGP 8.7.3, Kotlin 2.0.21, Hilt 2.52

--- a/android-app/gradle.properties
+++ b/android-app/gradle.properties
@@ -1,15 +1,11 @@
-# AndroidX migration
+# AndroidX
 android.useAndroidX=true
-android.enableJetifier=true
+android.nonTransitiveRClass=true
 
-# Kotlin code style
+# Kotlin
 kotlin.code.style=official
 
-# Gradle JVM settings
+# Gradle
 org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-
-# Enable parallel builds
 org.gradle.parallel=true
-
-# Android SDK
-android.nonTransitiveRClass=true
+org.gradle.configuration-cache=true
