--- a/android-app/gradle.properties
+++ b/android-app/gradle.properties
@@ -5,7 +5,8 @@ android.nonTransitiveRClass=true
 # Kotlin
 kotlin.code.style=official
 
-# Gradle
-org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
-org.gradle.parallel=true
-org.gradle.configuration-cache=true
+# Gradle - Reduced memory for Windows
+org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+org.gradle.parallel=false
+org.gradle.daemon=true
+org.gradle.configuration-cache=false
