--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ redis==5.0.1
 loguru==0.7.2
 twilio==9.0.0
 openai==1.12.0
-passlib[bcrypt]==1.7.4
+bcrypt==4.1.2
 python-multipart==0.0.9
 slowapi==0.1.9
 email-validator==2.1.0
@@ -19,3 +19,6 @@ pyairtable==2.3.0
 
 # Supabase
 supabase==2.15.0
+
+# Firebase Admin SDK (para FCM push notifications)
+firebase-admin==6.4.0
