--- a/android-app/gradle.properties
+++ b/android-app/gradle.properties
@@ -5,8 +5,8 @@ android.nonTransitiveRClass=true
 # Kotlin
 kotlin.code.style=official
 
-# Gradle - Reduced memory for Windows
-org.gradle.jvmargs=-Xmx1024m -Dfile.encoding=UTF-8
+# Gradle - Memory settings
+org.gradle.jvmargs=-Xmx2048m -XX:MaxMetaspaceSize=512m -Dfile.encoding=UTF-8
 org.gradle.parallel=false
 org.gradle.daemon=true
 org.gradle.configuration-cache=false
