--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ loguru==0.7.2
 twilio==9.0.0
 openai==1.12.0
 bcrypt==4.1.2
+passlib[bcrypt]==1.7.4
 python-multipart==0.0.9
 slowapi==0.1.9
 email-validator==2.1.0
